реализован функционал работы с вещами посредстово JPA (Spring boot и Hibernate). Исправлена schema.sql (убраны лишние ограничения в полях таблиц - проверка на наличие запросв у вещи)